DevAccount/src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>B.E -ECE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE-EEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE-CSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE-IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE-MECH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF( ISPICKVAL(Status__c,&apos;Approved&apos;),
IMAGE(&apos;/servlet/servlet.FileDownload?file=015i0000002H71Q&apos;,&quot;hi&quot;,20,30),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <referenceTo>staff__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>age1__c</fullName>
        <formula>IF(AND(MONTH(dob__c) = 2, DAY(dob__c) = 29),
(IF(OR(MOD(YEAR(today()), 400) = 0, AND(MOD(YEAR(today()) ,4) = 0, MOD(YEAR(today()), 100) &lt;&gt; 0)),
DATE(YEAR(today()), MONTH(dob__c), DAY(dob__c)),
DATE(YEAR(today()), MONTH(dob__c + 1), 28))),
(DATE(YEAR(today()), MONTH(dob__c) , DAY(dob__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>age</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>age__c</fullName>
        <label>age</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dob__c</fullName>
        <label>dob</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mark1__c</fullName>
        <label>mark1</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mark2__c</fullName>
        <label>mark2</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>if(age__c &gt; 18 , false ,  mark1__c &gt; 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>total__c</fullName>
        <formula>mark1__c  +  mark2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>vehicle</label>
        <referenceTo>vehicle__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>typ1</fullName>
        <active>true</active>
        <label>typ1</label>
    </recordTypes>
    <recordTypes>
        <fullName>typ2</fullName>
        <active>true</active>
        <label>typ2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>check_marks</fullName>
        <active>false</active>
        <errorConditionFormula>mark1__c  &lt; 0</errorConditionFormula>
        <errorMessage>Please enter valid mark</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>check_marks1</fullName>
        <active>false</active>
        <errorConditionFormula>mark2__c  &lt; 0</errorConditionFormula>
        <errorMessage>Please Enter valid marks.</errorMessage>
    </validationRules>
</CustomObject>